--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -21,5 +21,9 @@
 
     <string name="dialog_unauthorized_title">Acesso desautorizado</string>
     <string name="dialog_screen_unauthorized_description">Você não tem permissão para acessar este recurso.</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="please_wait">Please wait…</string>
+    <string name="sign_in_to_continue">Sign in to Continue</string>
+    <string name="to_use_this_app_first_you_need_to_sign_in">To use this app, first you need to sign in.</string>
 
 </resources>
