--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -2,11 +2,11 @@
     <string name="app_name">One-Tap Sign-In</string>
 
     <!-- Sign-in -->
-    <string name="sign_in_screen_title_1">Boas-vindas</string>
-    <string name="sign_in_screen_title_2">Para começar a usar o aplicativo, primeiro você precisa fazer login.</string>
+    <string name="sign_in_to_continue">Sign in to Continue</string>
+    <string name="to_use_this_app_first_you_need_to_sign_in">To use this app, first you need to sign in.</string>
 
-    <string name="sign_in_screen_sign_in_with_google_desc">Entrar com Google</string>
-    <string name="sign_in_screen_sign_in_with_google_desc_progress">Um momento…</string>
+    <string name="sign_in_with_google">Sign in with Google</string>
+    <string name="please_wait">Please wait…</string>
 
     <!-- Profile -->
     <string name="profile_screen_">Minha conta</string>
@@ -15,15 +15,8 @@
     <string name="profile_screen_save_success_text">Conta salva com sucesso.</string>
     <string name="profile_screen_unauthorized_text">Acesso desautorizado ao recurso.</string>
 
-    <!-- Dialog -->
-    <string name="dialog_internet_connection_failed_title">Conexão perdida</string>
-    <string name="dialog_internet_connection_failed_description">Garanta que você esteja conectado com a Internet e tente novamente.</string>
-
-    <string name="dialog_unauthorized_title">Acesso desautorizado</string>
-    <string name="dialog_screen_unauthorized_description">Você não tem permissão para acessar este recurso.</string>
-    <string name="sign_in_with_google">Sign in with Google</string>
-    <string name="please_wait">Please wait…</string>
-    <string name="sign_in_to_continue">Sign in to Continue</string>
-    <string name="to_use_this_app_first_you_need_to_sign_in">To use this app, first you need to sign in.</string>
+    <!-- Snackbar -->
+    <string name="snackbar_internet_connection_failed">Internet connection failed</string>
+    <string name="snackbar_unauthorized">Unauthorized access</string>
 
 </resources>
