--- a/app/app/src/main/res/values/strings.xml
+++ b/app/app/src/main/res/values/strings.xml
@@ -12,18 +12,23 @@
     <string name="profile_screen_top_bar_title">Profile</string>
     <string name="profile_screen_google_sign_out_text">Sign out</string>
 
+    <!-- Inline errors -->
+    <string name="inline_user_name_is_blank">Name is required.</string>
+    <string name="inline_user_name_too_big">Name length must be up to 35 chars.</string>
+
     <!-- Snackbar success -->
     <string name="snackbar_edit_user_succeeded">Data edited successfully.</string>
+    <string name="snackbar_edit_user_no_data_changed">No data has changed.</string>
     <string name="snackbar_delete_user_succeeded">User deleted successfully.</string>
 
-    <!-- Snackbar error -->
+    <!-- Snackbar errors -->
     <string name="snackbar_credential_unsupported_type_error">This credential type is not supported. Try logging with your Google account.</string>
     <string name="snackbar_credential_unsupported_api_error">Failed to verify credentials. Try updating the Android version of your device and restarting the app.</string>
     <string name="snackbar_credential_no_credentials_found_error">No Google accounts found. Please try again later.</string>
     <string name="snackbar_credential_unknown_error">Unexpected error. Please try again later.</string>
 
     <string name="snackbar_preferences_serialization_error">Failed to load user data. Please try again later.</string>
-    <string name="snackbar_preferences_security_error">Failed to check the integrity your session. Please sign in again.</string>
+    <string name="snackbar_preferences_security_error">Failed to check the integrity of your session. Please sign in again.</string>
     <string name="snackbar_preferences_unknown_error">Unexpected error. Please restart the app.</string>
 
     <string name="snackbar_http_bad_request_error">Invalid data. Please check your input and try again.</string>
